--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -2,3 +2,28 @@
 
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
+
+
+/* FONTS  */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+/* STYLES */
+@import url('./assets/css/generics.css');
+@import url('./assets/css/home.css');
+
+/* @import url('./navBar.css');
+@import url('./modal.css');
+@import url('./sectionProducts.css');
+@import url('./components.css');
+@import url('./contacte.css');
+@import url('./faqs.css');
+@import url('./blog.css'); */
+
+
+/* COLORS */
+:root {
+  --greyBlue: #566981;
+  --grey: #555555;
+  --greenBlue: #ADD2E2;
+}
