--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -16,9 +16,12 @@
         <li class="nav-item rounded">
           <a class="nav-link" href="#"><i class="bi bi-telephone-fill me-2"></i>Contact</a>
         </li>
+        <li class="nav-item rounded">
+          <a class="nav-link" href="#"><i style="font-size: 20px;" class="fa fa-shopping-cart"></i></a>
+        </li>
         <li class="nav-item dropdown rounded">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-            aria-expanded="false"><i class="bi bi-person-fill me-2"></i>Profile</a>
+            aria-expanded="false"><i style="font-size: 20px;" class="fa fa-user-circle-o"></i></a>
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="#">Account</a></li>
             <li><a class="dropdown-item" href="#">Another action</a></li>
