--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <navbarComponent></navbarComponent>
 
-<div class="bodyComponents">
+<div class="bodyComponents" style="margin-top: 56px;">
   <router-outlet></router-outlet>
 </div>
