--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -8,13 +8,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-md-auto gap-2">
         <li class="nav-item rounded">
-          <a class="nav-link active" aria-current="page" href="#"><i class="bi bi-house-fill me-2"></i>Home</a>
+          <a class="nav-link active" aria-current="page" href="#"><i class="bi bi-house-fill me-2"></i>Inicio</a>
         </li>
         <li class="nav-item rounded">
-          <a class="nav-link" href="#"><i class="bi bi-people-fill me-2"></i>About</a>
+          <a class="nav-link" href="#"><i class="bi bi-people-fill me-2"></i>Mercado</a>
         </li>
         <li class="nav-item rounded">
-          <a class="nav-link" href="#"><i class="bi bi-telephone-fill me-2"></i>Contact</a>
+          <a class="nav-link" href="#"><i class="bi bi-telephone-fill me-2"></i>Ayuda</a>
         </li>
         <li class="nav-item rounded">
           <a class="nav-link" href="#"><i style="font-size: 20px;" class="fa fa-shopping-cart"></i></a>
@@ -23,8 +23,8 @@
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
             aria-expanded="false"><i style="font-size: 20px;" class="fa fa-user-circle-o"></i></a>
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Account</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">Cuenta</a></li>
+            <li><a class="dropdown-item" href="#">Mis Productos</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
