--- a/frontend/src/assets/css/generics.css
+++ b/frontend/src/assets/css/generics.css
@@ -120,6 +120,7 @@ span#error-campo-mensaje-hores {
 	border: solid 1px var(--main-color) !important;
 	border-left: solid 3px var(--main-color) !important;
 	color: var(--main-color) !important;
+  
 }
 
 .error-campo-checked {
@@ -131,7 +132,7 @@ span#error-campo-mensaje-hores {
 .ok-campo {
 	border: solid 1px var(--succes) !important;
 	border-left: solid 3px var(--succes) !important;
-	border-radius: 0.2em !important;
+	/* border-radius: 0.2em !important; */
 	/* //color: var(--main-color); */
 }
 
