--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -55,7 +55,7 @@
         </div>
         <div class="col-sm-6 mb-4">
           <label for="years" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-envelope-at-fill me-2"></i>Edad</label>
-          <input formControlName="years" [(ngModel)]="this.register.years" (ngModelChange)="checkPasswords($event)" type="date" id="years" name="password2" class="form-control form-control-lg" required=""maxlength="100">
+          <input formControlName="years" [(ngModel)]="this.register.years" (ngModelChange)="checkYears($event)" type="date" id="years" name="password2" class="form-control form-control-lg" required=""maxlength="100">
           <div class="invalid-feedback">Required / Error Format!</div>
         </div>
         <div class="col-12 mb-4">
@@ -68,7 +68,7 @@
           </div>
         </div>
         <div class="col-sm-6 mb-4">
-          <label for="telephone" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-telephone-fill me-2"></i>Phone</label>
+          <label for="telephone" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-telephone-fill me-2"></i>Teléfono</label>
           <input type="tel" formControlName="telephone" id="telephone" name="telephone" [(ngModel)]="this.register.telephone" ng2TelInput [ng2TelInputOptions]="{initialCountry: 'es'}" pattern="[0-9\d\-*+#,;]*" class="form-control form-control-lg"/>
           <!-- <input formControlName="telephone" [(ngModel)]="this.register.telephone" type="tel" id="phone" name="Phone" class="form-control form-control-lg" required="" data-format="custom" data-delimiter="-" data-blocks="2 3 4" data-numeral="9" placeholder="Your Phone Number" pattern="[0-9\d\-*+#,;]*" minlength="10" maxlength="20"> -->
           <div class="invalid-feedback">Required / Error Format!</div>
@@ -115,8 +115,7 @@
           <div class="invalid-feedback">Required!</div>
         </div>
 
-        
-  
+
   
       </div>
       <div class="g-recaptcha" data-sitekey="6LcLbMUfAAAAADl3ZYTYPESh3TD_yzth8raTOgo4" data-callback="verifyCaptcha">
