--- a/frontend/src/app/components/views/register/register.component.html
+++ b/frontend/src/app/components/views/register/register.component.html
@@ -75,6 +75,7 @@
           <div class="invalid-feedback">Required / Error Format!</div>
         </div>
 
+        <h4>Dirección de envio</h4>
         <div class="col-sm-6 mb-4">
           <label for="address" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-envelope-at-fill me-2"></i>Dirección</label>
           <input formControlName="address" [(ngModel)]="this.register.address" type="text" id="address" name="address" class="form-control form-control-lg" required="" maxlength="100">
@@ -89,37 +90,53 @@
 
         <div class="col-sm-6 mb-4">
           <label for="region" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-envelope-at-fill me-2"></i>Provincia</label>
-          <input formControlName="region" [(ngModel)]="this.register.region" type="number" id="region" name="region" class="form-control form-control-lg" required="" maxlength="100">
+          <input formControlName="region" [(ngModel)]="this.register.region" type="text" id="region" name="region" class="form-control form-control-lg" required="" maxlength="100">
           <div class="invalid-feedback">Required / Error Format!</div>
         </div>
      
         <div class="col-sm-6 mb-4">
           <label for="country" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-envelope-at-fill me-2"></i>País</label>
-          <input formControlName="country" [(ngModel)]="this.register.country" type="number" id="country" name="country" class="form-control form-control-lg" required="" maxlength="100">
+          <input formControlName="country" [(ngModel)]="this.register.country" type="text" id="country" name="country" class="form-control form-control-lg" required="" maxlength="100">
           <div class="invalid-feedback">Required / Error Format!</div>
         </div>
         
-        <div class="col-sm-6 mb-4">
-          <label for="subject" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-tags-fill me-2"></i>Tags</label>
-          <select id="subject" class="form-select form-select-lg" name="Subject" required="">
-            <option value="" selected="" disabled="">Please Select</option>
-            <option value="Appointment">Appointment</option>
-            <option value="Pricing">Pricing</option>
-            <option value="Suggestion">Suggestion</option>
-            <option value="Other">Other</option>
-          </select>
-          <div class="invalid-feedback">Required!</div>
-        </div>
-        <div class="col-12 mb-4">
-          <label for="message" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-pencil-square me-2"></i>Comment</label>
-          <textarea id="message" name="Message" class="form-control form-control-lg" rows="4" required="" placeholder="Write Comment Here..." maxlength="300"></textarea>
-          <div class="invalid-feedback">Required!</div>
+        
+        <h4>Dirección de facturación</h4>
+        <div style="margin-top: 10px; margin-bottom: 10px;">
+          <p style="font-size: small; margin-bottom: -1px;">¿Utilizar la misma dirección de envío?</p>
+          <div class="form-check form-switch">
+            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" (click)="sameBilling()">
+            <label class="form-check-label" for="flexSwitchCheckDefault">No / Sí</label>
+          </div>
         </div>
 
-
-  
-      </div>
       
+
+        <div class="col-sm-6 mb-4">
+          <label for="billingAddress" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-envelope-at-fill me-2"></i>Dirección</label>
+          <input formControlName="billingAddress" [(ngModel)]="this.register.billingAddress" type="text" id="billingAddress" name="billingAddress" class="form-control form-control-lg" required maxlength="100">
+          <div class="invalid-feedback">Required / Error Format!</div>
+        </div>
+
+        <div class="col-sm-6 mb-4">
+          <label for="billingZipCode" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-envelope-at-fill me-2"></i>CP</label>
+          <input formControlName="billingZipCode" [(ngModel)]="this.register.billingZipCode" type="number" id="billingZipCode" name="billingZipCode" class="form-control form-control-lg" required maxlength="100">
+          <div class="invalid-feedback">Required / Error Format!</div>
+        </div>
+
+        <div class="col-sm-6 mb-4">
+          <label for="billingRegion" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-envelope-at-fill me-2"></i>Provincia</label>
+          <input formControlName="billingRegion" [(ngModel)]="this.register.billingRegion" type="text" id="billingRegion" name="billingRegion" class="form-control form-control-lg" required maxlength="100">
+          <div class="invalid-feedback">Required / Error Format!</div>
+        </div>
+     
+        <div class="col-sm-6 mb-4">
+          <label for="billingCountry" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-envelope-at-fill me-2"></i>País</label>
+          <input formControlName="billingCountry" [(ngModel)]="this.register.country" type="text" id="billingCountry" name="billingCountry" class="form-control form-control-lg" required maxlength="100">
+          <div class="invalid-feedback">Required / Error Format!</div>
+        </div>
+       
+      </div>  
      
       <button type="submit" class="btn btn-primary btn-lg me-3" ><i class="fa-solid bi bi-send-fill me-2"></i>Send</button>
       <button type="reset" class="btn btn-primary-soft btn-lg"><i class="fa-solid bi bi-arrow-clockwise me-2"></i>Reset</button>
