--- a/frontend/src/app/components/views/register/register.component.html
+++ b/frontend/src/app/components/views/register/register.component.html
@@ -84,7 +84,7 @@
 
         <div class="col-sm-6 mb-4">
           <label for="zipCode" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-envelope-at-fill me-2"></i>CP</label>
-          <input formControlName="zipCode" [(ngModel)]="this.register.zipCode" type="number" id="zipCode" name="zipCode" class="form-control form-control-lg" required="" maxlength="100">
+          <input formControlName="zipCode" [(ngModel)]="this.register.zipCode" maxLength="5" type="number" id="zipCode" name="zipCode" class="form-control form-control-lg" required="">
           <div class="invalid-feedback">Required / Error Format!</div>
         </div>
 
@@ -120,7 +120,7 @@
 
         <div class="col-sm-6 mb-4">
           <label for="billingZipCode" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-envelope-at-fill me-2"></i>CP</label>
-          <input formControlName="billingZipCode" [(ngModel)]="this.register.billingZipCode" type="number" id="billingZipCode" name="billingZipCode" class="form-control form-control-lg" required maxlength="100">
+          <input formControlName="billingZipCode" [(ngModel)]="this.register.billingZipCode" maxLength="5" type="number" id="billingZipCode" name="billingZipCode" class="form-control form-control-lg" required>
           <div class="invalid-feedback">Required / Error Format!</div>
         </div>
 
@@ -138,7 +138,7 @@
        
       </div>  
      
-      <button type="submit" class="btn btn-primary btn-lg me-3" ><i class="fa-solid bi bi-send-fill me-2"></i>Send</button>
+      <button type="submit" class="btn btn-primary btn-lg me-3" (click)="si()"><i class="fa-solid bi bi-send-fill me-2"></i>Send</button>
       <button type="reset" class="btn btn-primary-soft btn-lg"><i class="fa-solid bi bi-arrow-clockwise me-2"></i>Reset</button>
     </form>
   </div>
