--- a/frontend/src/app/components/views/register/register.component.html
+++ b/frontend/src/app/components/views/register/register.component.html
@@ -20,7 +20,7 @@
         </li>
       </ul>
     </div>
-    <form [formGroup]="registerForm" class="col-xl-7 col-md-8 offset-xl-1 needs-validation" novalidate="" name="$ctrl.form" id="gform" method="post" action="">
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit(); registerForm.reset();" class="col-xl-7 col-md-8 offset-xl-1 needs-validation" novalidate="" name="$ctrl.form" id="gform" method="post" action="">
       <!-- <input type="text" id="name" name="Name" class="form-control form-control-lg" required="" placeholder="" maxlength="60" [(ngModel)]="user.title" (ngModelChange)="test($event)"> -->
       <div class="row">
         <div class="col-sm-6 mb-4">
@@ -39,6 +39,17 @@
           <div class="invalid-feedback">Obligatiorio</div>
         </div>
         <div class="col-sm-6 mb-4">
+          <label for="years" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-envelope-at-fill me-2"></i>Edad</label>
+          <input formControlName="years" [(ngModel)]="this.register.years" (ngModelChange)="checkYears($event)" type="date" id="years" name="password2" class="form-control form-control-lg" required=""maxlength="100">
+          <div class="invalid-feedback">Required / Error Format!</div>
+        </div>
+        <div class="col-sm-6 mb-4">
+          <label for="telephone" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-telephone-fill me-2"></i>Teléfono</label>
+          <input type="tel" formControlName="telephone" id="telephone" name="telephone" [(ngModel)]="this.register.telephone" ng2TelInput [ng2TelInputOptions]="{initialCountry: 'es'}" pattern="[0-9\d\-*+#,;]*" class="form-control form-control-lg"/>
+          <!-- <input formControlName="telephone" [(ngModel)]="this.register.telephone" type="tel" id="phone" name="Phone" class="form-control form-control-lg" required="" data-format="custom" data-delimiter="-" data-blocks="2 3 4" data-numeral="9" placeholder="Your Phone Number" pattern="[0-9\d\-*+#,;]*" minlength="10" maxlength="20"> -->
+          <div class="invalid-feedback">Required / Error Format!</div>
+        </div>
+        <div class="col-sm-6 mb-4">
           <label for="email" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-envelope-at-fill me-2"></i>Email</label>
           <input formControlName="mail" [(ngModel)]="this.register.mail" type="mail" id="mail" name="mail" class="form-control form-control-lg" required="" placeholder="Your Email Address!" maxlength="100">
           <div class="invalid-feedback">Required / Error Format!</div>
@@ -52,26 +63,6 @@
         <div class="col-sm-6 mb-4">
           <label for="email" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-envelope-at-fill me-2"></i>Confirmar Contraseña</label>
           <input formControlName="password2" [(ngModel)]="this.register.password2" (ngModelChange)="checkPasswords($event)" type="password" id="password2" name="password2" class="form-control form-control-lg" required=""maxlength="100">
-          <div class="invalid-feedback">Required / Error Format!</div>
-        </div>
-        <div class="col-sm-6 mb-4">
-          <label for="years" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-envelope-at-fill me-2"></i>Edad</label>
-          <input formControlName="years" [(ngModel)]="this.register.years" (ngModelChange)="checkYears($event)" type="date" id="years" name="password2" class="form-control form-control-lg" required=""maxlength="100">
-          <div class="invalid-feedback">Required / Error Format!</div>
-        </div>
-        <div class="col-12 mb-4">
-          <label for="gender" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-gender-ambiguous me-2"></i>Género</label><br>
-          <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-            <input type="radio" class="btn-check" name="Gender" id="btnradio1" autocomplete="off" value="先生" checked="">
-            <label class="btn btn-outline-secondary" for="btnradio1"><i class="fa-solid bi bi-gender-male me-2"></i>Male</label>
-            <input type="radio" class="btn-check" name="Gender" id="btnradio3" autocomplete="off" value="小姐">
-            <label class="btn btn-outline-secondary" for="btnradio3"><i class="fa-solid bi bi-gender-female me-2"></i>Female</label>
-          </div>
-        </div>
-        <div class="col-sm-6 mb-4">
-          <label for="telephone" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-telephone-fill me-2"></i>Teléfono</label>
-          <input type="tel" formControlName="telephone" id="telephone" name="telephone" [(ngModel)]="this.register.telephone" ng2TelInput [ng2TelInputOptions]="{initialCountry: 'es'}" pattern="[0-9\d\-*+#,;]*" class="form-control form-control-lg"/>
-          <!-- <input formControlName="telephone" [(ngModel)]="this.register.telephone" type="tel" id="phone" name="Phone" class="form-control form-control-lg" required="" data-format="custom" data-delimiter="-" data-blocks="2 3 4" data-numeral="9" placeholder="Your Phone Number" pattern="[0-9\d\-*+#,;]*" minlength="10" maxlength="20"> -->
           <div class="invalid-feedback">Required / Error Format!</div>
         </div>
 
@@ -132,13 +123,13 @@
      
         <div class="col-sm-6 mb-4">
           <label for="billingCountry" class="form-label fs-base fc-3 fw-bold"><i class="fa-solid bi bi-envelope-at-fill me-2"></i>País</label>
-          <input formControlName="billingCountry" [(ngModel)]="this.register.country" type="text" id="billingCountry" name="billingCountry" class="form-control form-control-lg" required maxlength="100">
+          <input formControlName="billingCountry" [(ngModel)]="this.register.billingCountry" type="text" id="billingCountry" name="billingCountry" class="form-control form-control-lg" required maxlength="100">
           <div class="invalid-feedback">Required / Error Format!</div>
         </div>
        
       </div>  
      
-      <button type="submit" class="btn btn-primary btn-lg me-3" (click)="si()"><i class="fa-solid bi bi-send-fill me-2"></i>Send</button>
+      <button type="submit" class="btn btn-primary btn-lg me-3"><i class="fa-solid bi bi-send-fill me-2"></i>Send</button>
       <button type="reset" class="btn btn-primary-soft btn-lg"><i class="fa-solid bi bi-arrow-clockwise me-2"></i>Reset</button>
     </form>
   </div>
