--- a/frontend/src/app/components/views/public/login/login.component.html
+++ b/frontend/src/app/components/views/public/login/login.component.html
@@ -14,11 +14,11 @@
           <form [formGroup]="loginForm" (ngSubmit)="onSubmit(); loginForm.reset();" method="post">
             <div class="form-group">
               <label class="form-control-label">Correo Electrónico</label>
-              <input formControlName="mail" [(ngModel)]="this.login.mail" type="text" id="mail" class="form-control">
+              <input formControlName="mail" [(ngModel)]="this.login.mail" type="text" class="form-control">
             </div>
             <div class="form-group">
               <label class="form-control-label">Contraseña</label>
-              <input formControlName="password" [(ngModel)]="this.login.password" type="password" id="password" class="form-control">
+              <input formControlName="password" [(ngModel)]="this.login.password" type="password" class="form-control">
             </div>
 
             <div class="col-lg-12 loginbttm">
