fix shared (incluir token en localstorage????)

--- a/frontend/src/app/components/views/private/userProducts/userProducts.component.html
+++ b/frontend/src/app/components/views/private/userProducts/userProducts.component.html
@@ -5,11 +5,10 @@
  
   <div class="generalDiv">
     <div class="divContentBox">
-      
-      <div class="boxProduct" *ngFor="let product of products">
-        <h3 style="font-size: 20px;text-align: center;">{{product.title}}</h3>
-        <img src="{{product.image}}" alt="" class="imgProduct">
-        <p>{{product.price}}</p>
+      <!-- <div class="boxProduct" *ngFor="let product of products"> -->
+        <!-- <h3 style="font-size: 20px;text-align: center;">{{product.title}}</h3> -->
+        <!-- <img src="{{product.image}}" alt="" class="imgProduct"> -->
+        <!-- <p>{{product.price}}</p> -->
         <!-- <button (click)="deleteProduct(post.uid)">Delete Product</button> -->
       </div>
     
@@ -25,4 +24,3 @@
       <p style="font-size: 20px;text-align: center;">{{post.image}}</p>
     </a>
   </li> -->
-</div>
