--- a/frontend/src/app/components/views/public/productSupport/productSupport.component.html
+++ b/frontend/src/app/components/views/public/productSupport/productSupport.component.html
@@ -22,7 +22,7 @@
         </div>
       </div>  
      
-      <button type="submit" class="btn btn-primary btn-lg me-3"><i class="fa-solid bi bi-send-fill me-2"></i>Send</button>
+      <button type="submit" class="btn btn-primary btn-lg me-3" [disabled]="supportSearchForm.invalid"><i class="fa-solid bi bi-send-fill me-2"></i>Send</button>
       <button type="reset" class="btn btn-primary-soft btn-lg"><i class="fa-solid bi bi-arrow-clockwise me-2"></i>Reset</button>
     </form>
   </div>
