--- a/frontend/src/app/components/views/public/marketplace/marketplace.component.html
+++ b/frontend/src/app/components/views/public/marketplace/marketplace.component.html
@@ -1,4 +1,6 @@
 <div>
+  <carrouselComponent></carrouselComponent>
+
   <h1>Products</h1>
 
   <!-- <button class="addButton" [routerLink]="['/addproduct']">+</button> -->
@@ -16,6 +18,7 @@
     </div>
   </div>
 
+  
 <!-- 
   <li *ngFor="let post of posts">
     <a href="{{post.path}}">
@@ -26,3 +29,154 @@
     </a>
   </li> -->
 </div>
+
+
+
+
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <div class="thumb-wrapper">
+        <span class="wish-icon"><i class="fa fa-heart-o"></i></span>
+        <div class="img-box">
+          <img src="/examples/images/products/speaker.jpg" class="img-fluid" alt="Speaker">
+        </div>
+        <div class="thumb-content">
+          <h4>Bose Speaker</h4>
+          <p class="item-price"><a>$109.00</a> <span>$99.00</span></p>
+          <div class="star-rating">
+            <ul class="list-inline">
+              <li class="list-inline-item"><i class="fa fa-star"></i></li>
+              <li class="list-inline-item"><i class="fa fa-star"></i></li>
+              <li class="list-inline-item"><i class="fa fa-star"></i></li>
+              <li class="list-inline-item"><i class="fa fa-star"></i></li>
+              <li class="list-inline-item"><i class="fa fa-star-o"></i></li>
+            </ul>
+          </div>
+          <a href="#" class="btn btn-primary">Add to Cart</a>
+        </div>						
+      </div>
+    </div>
+    
+    <div class="col-md-4">
+      <div class="thumb-wrapper">
+        <span class="wish-icon"><i class="fa fa-heart-o"></i></span>
+        <div class="img-box">
+          <img src="/examples/images/products/speaker.jpg" class="img-fluid" alt="Speaker">
+        </div>
+        <div class="thumb-content">
+          <h4>Bose Speaker</h4>
+          <p class="item-price"><a>$109.00</a> <span>$99.00</span></p>
+          <div class="star-rating">
+            <ul class="list-inline">
+              <li class="list-inline-item"><i class="fa fa-star"></i></li>
+              <li class="list-inline-item"><i class="fa fa-star"></i></li>
+              <li class="list-inline-item"><i class="fa fa-star"></i></li>
+              <li class="list-inline-item"><i class="fa fa-star"></i></li>
+              <li class="list-inline-item"><i class="fa fa-star-o"></i></li>
+            </ul>
+          </div>
+          <a href="#" class="btn btn-primary">Add to Cart</a>
+        </div>						
+      </div>
+    </div>
+    
+    <div class="col-md-4">
+      <div class="thumb-wrapper">
+        <span class="wish-icon"><i class="fa fa-heart-o"></i></span>
+        <div class="img-box">
+          <img src="/examples/images/products/speaker.jpg" class="img-fluid" alt="Speaker">
+        </div>
+        <div class="thumb-content">
+          <h4>Bose Speaker</h4>
+          <p class="item-price"><a>$109.00</a> <span>$99.00</span></p>
+          <div class="star-rating">
+            <ul class="list-inline">
+              <li class="list-inline-item"><i class="fa fa-star"></i></li>
+              <li class="list-inline-item"><i class="fa fa-star"></i></li>
+              <li class="list-inline-item"><i class="fa fa-star"></i></li>
+              <li class="list-inline-item"><i class="fa fa-star"></i></li>
+              <li class="list-inline-item"><i class="fa fa-star-o"></i></li>
+            </ul>
+          </div>
+          <a href="#" class="btn btn-primary">Add to Cart</a>
+        </div>						
+      </div>
+    </div>
+    
+    <div class="col-md-4">
+      <div class="thumb-wrapper">
+        <span class="wish-icon"><i class="fa fa-heart-o"></i></span>
+        <div class="img-box">
+          <img src="/examples/images/products/speaker.jpg" class="img-fluid" alt="Speaker">
+        </div>
+        <div class="thumb-content">
+          <h4>Bose Speaker</h4>
+          <p class="item-price"><a>$109.00</a> <span>$99.00</span></p>
+          <div class="star-rating">
+            <ul class="list-inline">
+              <li class="list-inline-item"><i class="fa fa-star"></i></li>
+              <li class="list-inline-item"><i class="fa fa-star"></i></li>
+              <li class="list-inline-item"><i class="fa fa-star"></i></li>
+              <li class="list-inline-item"><i class="fa fa-star"></i></li>
+              <li class="list-inline-item"><i class="fa fa-star-o"></i></li>
+            </ul>
+          </div>
+          <a href="#" class="btn btn-primary">Add to Cart</a>
+        </div>						
+      </div>
+    </div>
+    
+    <div class="col-md-4">
+      <div class="thumb-wrapper">
+        <span class="wish-icon"><i class="fa fa-heart-o"></i></span>
+        <div class="img-box">
+          <img src="/examples/images/products/speaker.jpg" class="img-fluid" alt="Speaker">
+        </div>
+        <div class="thumb-content">
+          <h4>Bose Speaker</h4>
+          <p class="item-price"><a>$109.00</a> <span>$99.00</span></p>
+          <div class="star-rating">
+            <ul class="list-inline">
+              <li class="list-inline-item"><i class="fa fa-star"></i></li>
+              <li class="list-inline-item"><i class="fa fa-star"></i></li>
+              <li class="list-inline-item"><i class="fa fa-star"></i></li>
+              <li class="list-inline-item"><i class="fa fa-star"></i></li>
+              <li class="list-inline-item"><i class="fa fa-star-o"></i></li>
+            </ul>
+          </div>
+          <a href="#" class="btn btn-primary">Add to Cart</a>
+        </div>						
+      </div>
+    </div>
+    
+    <div class="col-md-4">
+      <div class="thumb-wrapper">
+        <span class="wish-icon"><i class="fa fa-heart-o"></i></span>
+        <div class="img-box">
+          <img src="/examples/images/products/speaker.jpg" class="img-fluid" alt="Speaker">
+        </div>
+        <div class="thumb-content">
+          <h4>Bose Speaker</h4>
+          <p class="item-price"><a>$109.00</a> <span>$99.00</span></p>
+          <div class="star-rating">
+            <ul class="list-inline">
+              <li class="list-inline-item"><i class="fa fa-star"></i></li>
+              <li class="list-inline-item"><i class="fa fa-star"></i></li>
+              <li class="list-inline-item"><i class="fa fa-star"></i></li>
+              <li class="list-inline-item"><i class="fa fa-star"></i></li>
+              <li class="list-inline-item"><i class="fa fa-star-o"></i></li>
+            </ul>
+          </div>
+          <a href="#" class="btn btn-primary">Add to Cart</a>
+        </div>						
+      </div>
+    </div>
+
+
+
+  </div>
+</div>
+    
