--- a/frontend/src/app/components/views/public/marketplace/marketplace.component.html
+++ b/frontend/src/app/components/views/public/marketplace/marketplace.component.html
@@ -14,7 +14,7 @@
             <div class="thumb-wrapper">
               <span class="wish-icon"><i class="fa fa-heart-o"></i></span>
               <div class="img-box">
-                <img src="{{product.image}}" class="img-fluid" alt="Speaker">
+                <img src={{utilsService.driveImages(product.image)}} class="img-fluid" alt="Speaker">
               </div>
               <div class="thumb-content">
                 <h4>{{product.title}}</h4>
