fix carrousel flechas

--- a/frontend/src/app/components/graphics/carrousel/carrousel.component.html
+++ b/frontend/src/app/components/graphics/carrousel/carrousel.component.html
@@ -289,10 +289,10 @@
 				</div>
 			</div>
 			<!-- Carousel controls -->
-			<a class="carousel-control-prev"  data-slide="prev">
-				<i class="fa fa-angle-left"></i>
+			<a class="carousel-control-prev"  data-slide="prev" data-target="#myCarousel">
+				<i class="fa fa-angle-left"></i>	
 			</a>
-			<a class="carousel-control-next"  data-slide="next">
+			<a class="carousel-control-next"  data-slide="next" data-target="#myCarousel">
 				<i class="fa fa-angle-right"></i>
 			</a>
 		</div>
