--- a/frontend/src/app/components/views/private/userProducts/userProducts.component.html
+++ b/frontend/src/app/components/views/private/userProducts/userProducts.component.html
@@ -2,17 +2,28 @@
   <h1>Products</h1>
 
   <!-- <button class="addButton" [routerLink]="['/addproduct']">+</button> -->
- 
+
+
   <div class="generalDiv">
     <div class="divContentBox">
-      
-      <div class="boxProduct" *ngFor="let product of products">
-        <h3 style="font-size: 20px;text-align: center;">{{product.title}}</h3>
-        <img src="{{product.image}}" alt="" class="imgProduct">
-        <p>{{product.price}}</p>
-        <!-- <button (click)="deleteProduct(post.uid)">Delete Product</button> -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4" *ngFor="let product of products">
+            <div class="thumb-wrapper">
+              <span class="wish-icon"><i class="fa fa-heart-o"></i></span>
+              <div class="img-box">
+                <img src={{utilsService.driveImages(product.image)}} class="img-fluid" onerror="this.onerror=null; this.src='https://drive.google.com/uc?export=view&id=1EGB1gi7VWxWTnBVqk09nTmlrIfuTJiSF'" >
+              </div>
+              <div class="thumb-content">
+                <h4>{{product.title}}</h4>
+                <starRatingComponent [stars]="product.stars"></starRatingComponent>
+                <p class="item-price"><a>{{product.price}}€</a></p>
+                <a href="#" class="btn btn-primary">Add to Cart</a>
+              </div>						
+            </div>
+          </div>
+        </div>
       </div>
-    
     </div>
   </div>
 
