--- a/frontend/src/app/components/views/private/userProducts/userProducts.component.html
+++ b/frontend/src/app/components/views/private/userProducts/userProducts.component.html
@@ -12,13 +12,14 @@
             <div class="thumb-wrapper">
               <span class="wish-icon"><i class="fa fa-heart-o"></i></span>
               <div class="img-box">
-                <img src={{utilsService.driveImages(product.image)}} height="172" width="306" onerror="this.onerror=null; this.src='https://drive.google.com/uc?export=view&id=1EGB1gi7VWxWTnBVqk09nTmlrIfuTJiSF'" >
+                <img src={{utilsService.driveImages(product.image)}} class="img-fluid" onerror="this.onerror=null; this.src='https://drive.google.com/uc?export=view&id=1EGB1gi7VWxWTnBVqk09nTmlrIfuTJiSF'" >
               </div>
               <div class="thumb-content">
                 <h4>{{product.title}}</h4>
                 <starRatingComponent [stars]="product.stars"></starRatingComponent>
                 <p class="item-price"><a>{{product.price}}€</a></p>
-                <a href="#" class="btn btn-primary">Add to Cart</a>
+                <a href="#" class="btn btn-primary">+ Carrito</a>
+                <a routerLink="/edit-product/{{ product.uid }}" class="btn btn-primary">Editar</a>
               </div>						
             </div>
           </div>
