--- a/frontend/src/app/components/graphics/starRating/starRating.component.html
+++ b/frontend/src/app/components/graphics/starRating/starRating.component.html
@@ -1,5 +1,12 @@
 <div class="strength">
   <div class="star-rating">
+    <ul class="list-inline" *ngIf="intStars===0">
+      <li class="list-inline-item"><i class="fa fa-star-o"></i></li>
+      <li class="list-inline-item"><i class="fa fa-star-o"></i></li> 
+      <li class="list-inline-item"><i class="fa fa-star-o"></i></li> 
+      <li class="list-inline-item"><i class="fa fa-star-o"></i></li> 
+      <li class="list-inline-item"><i class="fa fa-star-o"></i></li> 
+    </ul>
     <ul class="list-inline" *ngIf="intStars===1">
       <li class="list-inline-item"><i class="fa fa-star"></i></li>
       <li class="list-inline-item"><i class="fa fa-star-o"></i></li> 
